--- a/Vios.html
+++ b/Vios.html
@@ -9,10 +9,10 @@
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="index.html" id="logo"><img src="images/logo.png" alt="logo"></a>
+			<a href="index.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
 				<li>
-					<a href="index.html">Ford Focus(2014)</a>
+					<a href="Altis.html">Toyota Altis(2012)</a>
 				</li>
 				<li class="selected">
 					<a href="Vios.html">Toyota Vios(2018)</a>
@@ -24,11 +24,10 @@
 					<a href="Fit.html">Honda Fit(2013)</a>
 				</li>
 				<li>
-					<a href="Altis.html">Toyota Altis(2012)</a>
+					<a href="index.html">Ford Focus(2014)</a>
 				</li>
 			</ul>
-			<div class="vios">
-	
+			<div>
                  <img src="images/vios.jpg" alt="Img" height="360" width="960">
 			</div>
 		</div>
@@ -36,7 +35,7 @@
 				<center>
 				<br>
 				<br>
-				<h1 style="font-family: 'Conv_JockeyOne-Regular'; font-size: 40px;">TOYOTA Vios</h1>
+				<h1 style="font-family: 'Conv_JockeyOne-Regular'; font-size: 60px;">TOYOTA Vios</h1>
 				</center>
 			<div class="content">
 				<br>
