--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 	<meta charset="UTF-8">
 	<title>About - Car Racing Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<style>
+</style>
 </head>
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="index.html" id="logo"><img src="images/logo.png" alt="logo"></a>
+			<a href="index.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
-				<li class="selected">
-					<a href="index.html">Ford Focus(2014)</a>
+				<li>
+					<a href="Altis.html">Toyota Altis(2012)</a>
 				</li>
 				<li>
 					<a href="Vios.html">Toyota Vios(2018)</a>
@@ -23,12 +25,11 @@
 				<li>
 					<a href="Fit.html">Honda Fit(2013)</a>
 				</li>
-				<li>
-					<a href="Altis.html">Toyota Altis(2012)</a>
+				<li class="selected">
+					<a href="index.html">Ford Focus(2014)</a>
 				</li>
 			</ul>
-			<div class="focus">
-	
+			<div>
                  <img src="images/focus.jpg" alt="Img" height="360" width="960">
 			</div>
 		</div>
@@ -36,7 +37,7 @@
 		<center>
 		<br>
 		<br>
-		<h1 style="font-family: 'Conv_JockeyOne-Regular'; font-size: 40px;">Ford Focus</h1>
+		<h1 style="font-family: 'Conv_JockeyOne-Regular'; font-size: 60px;">Ford Focus</h1>
 		</center>
 			<div class="content">
 				<br>
@@ -81,3 +82,4 @@
 	</div>
 </body>
 </html>
+				
