--- a/Altis.html
+++ b/Altis.html
@@ -5,16 +5,14 @@
 	<meta charset="UTF-8">
 	<title>About - Car Racing Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<style>
-</style>
 </head>
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="index.html" id="logo"><img src="images/logo.png" alt="logo"></a>
+			<a href="index.html" id="logo3"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
-				<li>
-					<a href="index.html">Ford Focus(2014)</a>
+				<li class="selected">
+					<a href="Altis.html">Toyota Altis(2012)</a>
 				</li>
 				<li>
 					<a href="Vios.html">Toyota Vios(2018)</a>
@@ -25,12 +23,11 @@
 				<li>
 					<a href="Fit.html">Honda Fit(2013)</a>
 				</li>
-				<li class="selected">
-					<a href="Altis.html">Toyota Altis(2012)</a>
+				<li>
+					<a href="index.html">Ford Focus(2014)</a>
 				</li>
 			</ul>
-				<div class="altis">
-		
+			<div>
 	                 <img src="images/altis.jpg" alt="Img" height="360" width="960">
 				</div>
 		</div>
@@ -38,7 +35,7 @@
 				<center>
 				<br>
 				<br>
-				<h1 style="font-family: 'Conv_JockeyOne-Regular'; font-size: 40px;">TOYOTA Altis</h1>
+				<h1 style="font-family: 'Conv_JockeyOne-Regular'; font-size: 60px;">TOYOTA Altis</h1>
 				</center>
 					<div class="content">
 						<br>
