--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="index.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
+			<a href="Altis.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
 				<li>
 					<a href="Altis.html">Toyota Altis(2012)</a>
