--- a/Livina.html
+++ b/Livina.html
@@ -9,10 +9,10 @@
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="Altis.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
+			<a href="index.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
 				<li>
-					<a href="Altis.html">Toyota Altis(2012)</a>
+					<a href="index.html">Toyota Altis(2012)</a>
 				</li>
 				<li>
 					<a href="Vios.html">Toyota Vios(2018)</a>
@@ -24,7 +24,7 @@
 					<a href="Fit.html">Honda Fit(2013)</a>
 				</li>
 				<li>
-					<a href="index.html">Ford Focus(2014)</a>
+					<a href="focus.html">Ford Focus(2014)</a>
 				</li>
 			</ul>
 			<div>
@@ -41,34 +41,32 @@
 				<br>
 				<h3>介紹</h3>
 				<p>
-					引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門</br>
-					排氣量：1598cc</br>
-					最大馬力：115hp@5600rpm</br>
-					最大扭力：15.7kgm@4000rpm</br>
-					驅動型式：前輪驅動</br>
-					變速系統：CVT無段變速</br>
-					平均油耗：18.6km/ltr
-
+					<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門</br>
+					<li style="color:#A52A2A; font-size:30px;">排氣量：1598cc</br>
+					<li style="color:#A52A2A; font-size:30px;">最大馬力：115hp@5600rpm</br>
+					<li style="color:#A52A2A; font-size:30px;">最大扭力：15.7kgm@4000rpm</br>
+					<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
+					<li style="color:#A52A2A; font-size:30px;">變速系統：CVT無段變速</br>
+					<li style="color:#A52A2A; font-size:30px;">平均油耗：18.6km/ltr
 				</p>
 				<h3>配置</h3>
 				<p>
-					倒車輔助系統、電動窗防夾功能
+					<li style="color:#A52A2A; font-size:30px;">倒車輔助系統、電動窗防夾功能
 				<h3>價格&花費</h3>
 				<p>
-					新車價：64萬</br>
-					二手價：33萬</br>
-					牌照稅：7120元</br>
-					燃料費：4800元
-
+					<li style="color:#A52A2A; font-size:30px;">新車價：64萬</br>
+					<li style="color:#A52A2A; font-size:30px;">二手價：33萬</br>
+					<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元</br>
+					<li style="color:#A52A2A; font-size:30px;">燃料費：4800元
 				</p>
 				<h3>優、缺點</h3>
 				<p>
-					優點：後車箱空間大、省油、適合家庭使用</br>
-					缺點：後座寬度較窄、隔音差、方向盤太輕
+					<li style="color:#A52A2A; font-size:30px;">優點：後車箱空間大、省油、適合家庭使用</br>
+					<li style="color:#A52A2A; font-size:30px;">缺點：後座寬度較窄、隔音差、方向盤太輕
 				</p>
 				<h3>通病</h3>
 				<p>
-					CVT變速箱不穩定
+					<li style="color:#A52A2A; font-size:30px;">CVT變速箱不穩定
 				</p>
 			</div>
 		</div>
