--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
 	<meta charset="UTF-8">
 	<title>About - Car Racing Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<style>
-</style>
 </head>
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="Altis.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
+			<a href="index.html" id="logo3"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
-				<li>
-					<a href="Altis.html">Toyota Altis(2012)</a>
+				<li class="selected">
+					<a href="index.html">Toyota Altis(2012)</a>
 				</li>
 				<li>
 					<a href="Vios.html">Toyota Vios(2018)</a>
@@ -25,61 +23,57 @@
 				<li>
 					<a href="Fit.html">Honda Fit(2013)</a>
 				</li>
-				<li class="selected">
-					<a href="index.html">Ford Focus(2014)</a>
+				<li>
+					<a href="focus.html">Ford Focus(2014)</a>
 				</li>
 			</ul>
 			<div>
-                 <img src="images/focus.jpg" alt="Img" height="360" width="960">
-			</div>
+	                 <img src="images/altis.jpg" alt="Img" height="360" width="960">
+				</div>
 		</div>
-		<div class="body">
-		<center>
-		<br>
-		<br>
-		<h1 style="font-family: 'Conv_JockeyOne-Regular'; font-size: 60px;">Ford Focus</h1>
-		</center>
-			<div class="content">
+			<div class="body">
+				<center>
 				<br>
-				<h3>介紹</h3>
-				<p>
-							引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門</br>
-							排氣量：1999cc</br>
-							最大馬力：170hp@6600rpm</br>
-							最大扭力：20.6kgm@4450rpm</br>
-							驅動型式：前輪驅動</br>
-							變速系統：雙離合器6速自手排</br>
-							平均油耗：14.6km/ltr
-						</p>
+				<br>
+				<h1 style="font-family: 'Conv_JockeyOne-Regular'; font-size: 60px;">TOYOTA Altis</h1>
+				</center>
+					<div class="content">
+						<br>
+						<h3>介紹</h3>
+							<p>
+								<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門</br>
+								<li style="color:#A52A2A; font-size:30px;">排氣量：1796cc</br>
+								<li style="color:#A52A2A; font-size:30px;">最大馬力：140hp@6400rpm</br>
+								<li style="color:#A52A2A; font-size:30px;">最大扭力：17.6kgm@4000rpm</br>
+								<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
+								<li style="color:#A52A2A; font-size:30px;">變速系統：CVT 7速手自排</br>
+								<li style="color:#A52A2A; font-size:30px;">平均油耗：18.2km/ltr
+							</p>
 						<h3>配置</h3>
-						<p>
-							定速巡航、倒車輔助系統、前方駐車雷達、自動停車系統、光感應自動頭燈、雨滴感應雨刷、電動折疊後照鏡
-						</p>
-						<h3>價格&花費</h3>
-						<p>
-							新車價：67萬</br>
-							二手價：29萬</br>
-							牌照稅：11230元</br>
-							燃料費：6180元
-
-						</p>
+							<p>
+								<li style="color:#A52A2A; font-size:30px;">倒車輔助系統、定速巡航、電動窗防夾功能
+							<h3>價格&花費</h3>
+							<p>
+								<li style="color:#A52A2A; font-size:30px;">新車價：58萬</br>
+								<li style="color:#A52A2A; font-size:30px;">二手價：32萬</br>
+								<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元</br>
+								<li style="color:#A52A2A; font-size:30px;">燃料費：4800元
+							</p>
 						<h3>優、缺點</h3>
-						<p>
-							優點：與同級距車款相比操控性佳、動力佳，底盤扎實，隔音效果佳</br>
-							缺點：換檔慢、耗油
-
-						</p>
-						<h3>通病</h3>
-						<p>
-							變速箱換檔時容易有頓挫感、在市區行駛變速箱容易過熱
-						</p>
+							<p>
+								<li style="color:#A52A2A; font-size:30px;">優點：享受駕駛樂趣、空間大、省油、妥善率高引擎省油、平順、寧靜、變速箱齒比設計適合壅塞的駕駛環境、煞車性能佳、保養費用便宜、恆溫空調表現良好、零件耐用</br>
+								<li style="color:#A52A2A; font-size:30px;">缺點：底盤高、懸吊軟、A柱粗大(轉彎時視覺死角比一般同級車型大)
+							</p>
+							<h3>通病</h3>
+							<p>
+								<li style="color:#A52A2A; font-size:30px;">中水管易斷裂
+							</p>
+					</div>
 			</div>
-		</div>
-		<img src="images/focus1.jpg">&nbsp;<img src="images/focus2.jpg">&nbsp;<img src="images/focus3.jpg">
+		<img src="images/altis1.jpg">&nbsp;<img src="images/altis2.jpg">&nbsp;<img src="images/altis3.jpg">
 		<p class="footnote">
 			© 靜宜大學 觀光三B
 		</p>
 	</div>
 </body>
 </html>
-				
