--- a/Fit.html
+++ b/Fit.html
@@ -9,10 +9,10 @@
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="Altis.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
+			<a href="index.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
 				<li>
-					<a href="Altis.html">Toyota Altis(2012)</a>
+					<a href="index.html">Toyota Altis(2012)</a>
 				</li>
 				<li>
 					<a href="Vios.html">Toyota Vios(2018)</a>
@@ -24,7 +24,7 @@
 					<a href="Fit.html">Honda Fit(2013)</a>
 				</li>
 				<li>
-					<a href="index.html">Ford Focus(2014)</a>
+					<a href="focus.html">Ford Focus(2014)</a>
 				</li>
 			</ul>
 			<div>
@@ -41,33 +41,32 @@
 						<br>
 						<h3>介紹</h3>
 						<p>
-							引擎型式：自然進氣、直列四缸、SOHC、16氣門</br>
-							排氣量：1497cc</br>
-							最大馬力：120hp@6600rpmbr>
-							最大扭力：14.8kgm@4800rpm</br>
-							驅動型式：前輪驅動</br>
-							變速系統：5速自手排</br>
-							平均油耗：14.5km/ltr
+							<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、SOHC、16氣門</br>
+							<li style="color:#A52A2A; font-size:30px;">排氣量：1497cc</br>
+							<li style="color:#A52A2A; font-size:30px;">最大馬力：120hp@6600rpmbr>
+							<li style="color:#A52A2A; font-size:30px;">最大扭力：14.8kgm@4800rpm</br>
+							<li style="color:#A52A2A; font-size:30px;"><li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
+							<li style="color:#A52A2A; font-size:30px;">變速系統：5速自手排</br>
+							<li style="color:#A52A2A; font-size:30px;">平均油耗：14.5km/ltr
 						</p>
 						<h3>配置</h3>
 						<p>
-							倒車輔助系統、定速巡航、電動折疊後照鏡、電動窗防夾功能
+							<li style="color:#A52A2A; font-size:30px;">倒車輔助系統、定速巡航、電動折疊後照鏡、電動窗防夾功能
 						<h3>價格&花費</h3>
 						<p>
-							新車價：67萬</br>
-							二手價：34萬</br>
-							牌照稅：7120元</br>
-							燃料費：4800元
-
+							<li style="color:#A52A2A; font-size:30px;">新車價：67萬</br>
+							<li style="color:#A52A2A; font-size:30px;">二手價：34萬</br>
+							<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元</br>
+							<li style="color:#A52A2A; font-size:30px;">燃料費：4800元
 						</p>
 						<h3>優、缺點</h3>
 						<p>
-							優點：享受駕駛樂趣、空間大、省油、妥善率高</br>
-							缺點：隔音較差、後座舒適度較差
+							<li style="color:#A52A2A; font-size:30px;">優點：享受駕駛樂趣、空間大、省油、妥善率高</br>
+							<li style="color:#A52A2A; font-size:30px;">缺點：隔音較差、後座舒適度較差
 						</p>
 						<h3>通病</h3>
 						<p>
-							容易生鏽、煞車卡鉗易鎖死、底盤噪音明顯
+							<li style="color:#A52A2A; font-size:30px;">容易生鏽、煞車卡鉗易鎖死、底盤噪音明顯
 						</p>
 					</div>
 		</div>
