--- a/Fit.html
+++ b/Fit.html
@@ -45,7 +45,7 @@
 							<li style="color:#A52A2A; font-size:30px;">排氣量：1497cc</br>
 							<li style="color:#A52A2A; font-size:30px;">最大馬力：120hp@6600rpmbr>
 							<li style="color:#A52A2A; font-size:30px;">最大扭力：14.8kgm@4800rpm</br>
-							<li style="color:#A52A2A; font-size:30px;"><li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
+							<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
 							<li style="color:#A52A2A; font-size:30px;">變速系統：5速自手排</br>
 							<li style="color:#A52A2A; font-size:30px;">平均油耗：14.5km/ltr
 						</p>
