--- a/Fit.html
+++ b/Fit.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="index.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
+			<a href="index.html" id="logo3"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
 				<li>
 					<a href="index.html">Toyota Altis(2012)</a>
@@ -41,12 +41,12 @@
 						<br>
 						<h3>介紹</h3>
 						<p>
-							<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、SOHC、16氣門</br>
-							<li style="color:#A52A2A; font-size:30px;">排氣量：1497cc</br>
-							<li style="color:#A52A2A; font-size:30px;">最大馬力：120hp@6600rpmbr>
-							<li style="color:#A52A2A; font-size:30px;">最大扭力：14.8kgm@4800rpm</br>
-							<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
-							<li style="color:#A52A2A; font-size:30px;">變速系統：5速自手排</br>
+							<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、SOHC、16氣門
+							<li style="color:#A52A2A; font-size:30px;">排氣量：1497cc
+							<li style="color:#A52A2A; font-size:30px;">最大馬力：120hp@6600rpm
+							<li style="color:#A52A2A; font-size:30px;">最大扭力：14.8kgm@4800rpm
+							<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動
+							<li style="color:#A52A2A; font-size:30px;">變速系統：5速自手排
 							<li style="color:#A52A2A; font-size:30px;">平均油耗：14.5km/ltr
 						</p>
 						<h3>配置</h3>
@@ -54,14 +54,14 @@
 							<li style="color:#A52A2A; font-size:30px;">倒車輔助系統、定速巡航、電動折疊後照鏡、電動窗防夾功能
 						<h3>價格&花費</h3>
 						<p>
-							<li style="color:#A52A2A; font-size:30px;">新車價：67萬</br>
-							<li style="color:#A52A2A; font-size:30px;">二手價：34萬</br>
-							<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元</br>
+							<li style="color:#A52A2A; font-size:30px;">新車價：67萬
+							<li style="color:#A52A2A; font-size:30px;">二手價：34萬
+							<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元
 							<li style="color:#A52A2A; font-size:30px;">燃料費：4800元
 						</p>
 						<h3>優、缺點</h3>
 						<p>
-							<li style="color:#A52A2A; font-size:30px;">優點：享受駕駛樂趣、空間大、省油、妥善率高</br>
+							<li style="color:#A52A2A; font-size:30px;">優點：享受駕駛樂趣、空間大、省油、妥善率高
 							<li style="color:#A52A2A; font-size:30px;">缺點：隔音較差、後座舒適度較差
 						</p>
 						<h3>通病</h3>
