--- a/Livina.html
+++ b/Livina.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="index.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
+			<a href="index.html" id="logo3"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
 				<li>
 					<a href="index.html">Toyota Altis(2012)</a>
@@ -41,12 +41,12 @@
 				<br>
 				<h3>介紹</h3>
 				<p>
-					<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門</br>
-					<li style="color:#A52A2A; font-size:30px;">排氣量：1598cc</br>
-					<li style="color:#A52A2A; font-size:30px;">最大馬力：115hp@5600rpm</br>
-					<li style="color:#A52A2A; font-size:30px;">最大扭力：15.7kgm@4000rpm</br>
-					<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
-					<li style="color:#A52A2A; font-size:30px;">變速系統：CVT無段變速</br>
+					<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門
+					<li style="color:#A52A2A; font-size:30px;">排氣量：1598cc
+					<li style="color:#A52A2A; font-size:30px;">最大馬力：115hp@5600rpm
+					<li style="color:#A52A2A; font-size:30px;">最大扭力：15.7kgm@4000rpm
+					<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動
+					<li style="color:#A52A2A; font-size:30px;">變速系統：CVT無段變速
 					<li style="color:#A52A2A; font-size:30px;">平均油耗：18.6km/ltr
 				</p>
 				<h3>配置</h3>
@@ -54,14 +54,14 @@
 					<li style="color:#A52A2A; font-size:30px;">倒車輔助系統、電動窗防夾功能
 				<h3>價格&花費</h3>
 				<p>
-					<li style="color:#A52A2A; font-size:30px;">新車價：64萬</br>
-					<li style="color:#A52A2A; font-size:30px;">二手價：33萬</br>
-					<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元</br>
+					<li style="color:#A52A2A; font-size:30px;">新車價：64萬
+					<li style="color:#A52A2A; font-size:30px;">二手價：33萬
+					<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元
 					<li style="color:#A52A2A; font-size:30px;">燃料費：4800元
 				</p>
 				<h3>優、缺點</h3>
 				<p>
-					<li style="color:#A52A2A; font-size:30px;">優點：後車箱空間大、省油、適合家庭使用</br>
+					<li style="color:#A52A2A; font-size:30px;">優點：後車箱空間大、省油、適合家庭使用
 					<li style="color:#A52A2A; font-size:30px;">缺點：後座寬度較窄、隔音差、方向盤太輕
 				</p>
 				<h3>通病</h3>
