--- a/Vios.html
+++ b/Vios.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="page">
 		<div class="header header-about">
-			<a href="index.html" id="logo"><img src="images/logo3.jpg" alt="logo"></a>
+			<a href="index.html" id="logo3"><img src="images/logo3.jpg" alt="logo"></a>
 			<ul>
 				<li>
 					<a href="index.html">Toyota Altis(2012)</a>
@@ -41,12 +41,12 @@
 				<br>
 				<h3>介紹</h3>
 				<p>
-					<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門</br>
-					<li style="color:#A52A2A; font-size:30px;">排氣量：1496cc</br>
-					<li style="color:#A52A2A; font-size:30px;">最大馬力：107hp@6000rpm</br>
-					<li style="color:#A52A2A; font-size:30px;">最大扭力：14.3kgm@4200rpm</br>
-					<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
-					<li style="color:#A52A2A; font-size:30px;">變速系統：CVT 7速手自排</br>
+					<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門
+					<li style="color:#A52A2A; font-size:30px;">排氣量：1496cc
+					<li style="color:#A52A2A; font-size:30px;">最大馬力：107hp@6000rpm
+					<li style="color:#A52A2A; font-size:30px;">最大扭力：14.3kgm@4200rpm
+					<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動
+					<li style="color:#A52A2A; font-size:30px;">變速系統：CVT 7速手自排
 					<li style="color:#A52A2A; font-size:30px;">平均油耗：16.8km/ltr
 				</p>
 				<h3>配置</h3>
@@ -54,14 +54,14 @@
 					<li style="color:#A52A2A; font-size:30px;">倒車輔助系統、光感應自動頭燈、電動折疊後照鏡、電動窗防夾功能
 				<h3>價格&花費</h3>
 				<p>
-					<li style="color:#A52A2A; font-size:30px;">新車價：58萬</br>
-					<li style="color:#A52A2A; font-size:30px;">二手價：35萬</br>
-					<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元</br>
+					<li style="color:#A52A2A; font-size:30px;">新車價：58萬
+					<li style="color:#A52A2A; font-size:30px;">二手價：35萬
+					<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元
 					<li style="color:#A52A2A; font-size:30px;">燃料費：4800元
 				</p>
 				<h3>優、缺點</h3>
 				<p>
-					<li style="color:#A52A2A; font-size:30px;">優點：迴轉半徑小、與同級距車款相比車廂空間較大、養車成本低、冷氣冷</br>
+					<li style="color:#A52A2A; font-size:30px;">優點：迴轉半徑小、與同級距車款相比車廂空間較大、養車成本低、冷氣冷
 					<li style="color:#A52A2A; font-size:30px;">缺點：安全性較差、方向盤難以調整到舒適坐姿、隔音較差
 
 				</p>
