--- a/focus.html
+++ b/focus.html
@@ -27,8 +27,8 @@
 					<a href="focus.html">Ford Focus(2014)</a>
 				</li>
 			</ul>
-			<div>
-	                 <img src="images/focus.jpg" alt="Img" height="360" width="960">
+				<div>
+	                <img src="images/focus.jpg" alt="Img" height="360" width="960">
 				</div>
 		</div>
 			<div class="body">
@@ -41,12 +41,12 @@
 						<br>
 						<h3>介紹</h3>
 						<p>
-							<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門</br>
-							<li style="color:#A52A2A; font-size:30px;">排氣量：1999cc</br>
+							<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門
+							<li style="color:#A52A2A; font-size:30px;">排氣量：1999cc
 							<li style="color:#A52A2A; font-size:30px;">最大馬力：170hp@6600rpm
-							<li style="color:#A52A2A; font-size:30px;">最大扭力：20.6kgm@4450rpm</br>
-							<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
-							<li style="color:#A52A2A; font-size:30px;">變速系統：雙離合器6速自手排</br>
+							<li style="color:#A52A2A; font-size:30px;">最大扭力：20.6kgm@4450rpm
+							<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動
+							<li style="color:#A52A2A; font-size:30px;">變速系統：雙離合器6速自手排
 							<li style="color:#A52A2A; font-size:30px;">平均油耗：14.6km/ltr
 						</p>
 						<h3>配置</h3>
@@ -54,14 +54,14 @@
 							<li style="color:#A52A2A; font-size:30px;">定速巡航、倒車輔助系統、前方駐車雷達、自動停車系統、光感應自動頭燈、雨滴感應雨刷、電動折疊後照鏡
 						<h3>價格&花費</h3>
 						<p>
-							<li style="color:#A52A2A; font-size:30px;">新車價：67萬</br>
-							<li style="color:#A52A2A; font-size:30px;">二手價：29萬</br>
-							<li style="color:#A52A2A; font-size:30px;">牌照稅：11230元</br>
+							<li style="color:#A52A2A; font-size:30px;">新車價：67萬
+							<li style="color:#A52A2A; font-size:30px;">二手價：29萬
+							<li style="color:#A52A2A; font-size:30px;">牌照稅：11230元
 							<li style="color:#A52A2A; font-size:30px;">燃料費：6180元
 						</p>
 						<h3>優、缺點</h3>
 						<p>
-							<li style="color:#A52A2A; font-size:30px;">優點：與同級距車款相比操控性佳、動力佳，底盤扎實，隔音效果佳</br>
+							<li style="color:#A52A2A; font-size:30px;">優點：與同級距車款相比操控性佳、動力佳，底盤扎實，隔音效果佳
 							<li style="color:#A52A2A; font-size:30px;">缺點：換檔慢、耗油
 						</p>
 						<h3>通病</h3>
