--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<a href="focus.html">Ford Focus(2014)</a>
 				</li>
 			</ul>
-			<div>
-	                 <img src="images/altis.jpg" alt="Img" height="360" width="960">
+				<div>
+	               <img src="images/altis.jpg" alt="Img" height="360" width="960">
 				</div>
 		</div>
 			<div class="body">
@@ -41,12 +41,12 @@
 						<br>
 						<h3>介紹</h3>
 							<p>
-								<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門</br>
-								<li style="color:#A52A2A; font-size:30px;">排氣量：1796cc</br>
-								<li style="color:#A52A2A; font-size:30px;">最大馬力：140hp@6400rpm</br>
-								<li style="color:#A52A2A; font-size:30px;">最大扭力：17.6kgm@4000rpm</br>
-								<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動</br>
-								<li style="color:#A52A2A; font-size:30px;">變速系統：CVT 7速手自排</br>
+								<li style="color:#A52A2A; font-size:30px;">引擎型式：自然進氣、直列四缸、DOHC雙凸輪軸、16氣門
+								<li style="color:#A52A2A; font-size:30px;">排氣量：1796cc
+								<li style="color:#A52A2A; font-size:30px;">最大馬力：140hp@6400rpm
+								<li style="color:#A52A2A; font-size:30px;">最大扭力：17.6kgm@4000rpm
+								<li style="color:#A52A2A; font-size:30px;">驅動型式：前輪驅動
+								<li style="color:#A52A2A; font-size:30px;">變速系統：CVT 7速手自排
 								<li style="color:#A52A2A; font-size:30px;">平均油耗：18.2km/ltr
 							</p>
 						<h3>配置</h3>
@@ -54,14 +54,14 @@
 								<li style="color:#A52A2A; font-size:30px;">倒車輔助系統、定速巡航、電動窗防夾功能
 							<h3>價格&花費</h3>
 							<p>
-								<li style="color:#A52A2A; font-size:30px;">新車價：58萬</br>
-								<li style="color:#A52A2A; font-size:30px;">二手價：32萬</br>
-								<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元</br>
+								<li style="color:#A52A2A; font-size:30px;">新車價：58萬
+								<li style="color:#A52A2A; font-size:30px;">二手價：32萬
+								<li style="color:#A52A2A; font-size:30px;">牌照稅：7120元
 								<li style="color:#A52A2A; font-size:30px;">燃料費：4800元
 							</p>
 						<h3>優、缺點</h3>
 							<p>
-								<li style="color:#A52A2A; font-size:30px;">優點：享受駕駛樂趣、空間大、省油、妥善率高引擎省油、平順、寧靜、變速箱齒比設計適合壅塞的駕駛環境、煞車性能佳、保養費用便宜、恆溫空調表現良好、零件耐用</br>
+								<li style="color:#A52A2A; font-size:30px;">優點：享受駕駛樂趣、空間大、省油、妥善率高引擎省油、平順、寧靜、變速箱齒比設計適合壅塞的駕駛環境、煞車性能佳、保養費用便宜、恆溫空調表現良好、零件耐用
 								<li style="color:#A52A2A; font-size:30px;">缺點：底盤高、懸吊軟、A柱粗大(轉彎時視覺死角比一般同級車型大)
 							</p>
 							<h3>通病</h3>
