--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>About - Car Racing Website Template</title>
+	<title>新鮮人的第一台車選擇</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
